# mapping-serde

./: Cargo.toml  README.md
formats/element/: Cargo.toml
formats/element/src/: class.rs  field.rs  lib.rs  method.rs
formats/enigma/: Cargo.toml
formats/enigma/src/: de.rs  io.rs  lib.rs  ser.rs  walk.rs
formats/enigma/src/tests/: de.rs  ser.rs
formats/enigma/testset/: valid.mappings
formats/proguard/: Cargo.toml
formats/proguard/src/: de.rs  lib.rs  tests.rs
formats/proguard/testset/: proguard.txt
formats/tiny1/: Cargo.toml
formats/tiny1/src/: de.rs  lib.rs  ser.rs  stream.rs  tests.rs
formats/tiny1/src/de/: index.rs  pseudo_tree.rs  stream.rs
formats/tiny1/testset/: tiny.tiny
formats/tiny2/: Cargo.toml
formats/tiny2/src/: de.rs  lib.rs  ser.rs
formats/tiny2/src/tests/: de.rs  serde.rs
io/: Cargo.toml
io/src/: lib.rs  smol_str.rs
src/: de.rs  lib.rs  ser.rs
src/de/: impl.rs  visit.rs
src/ser/: impl.rs
util/: Cargo.toml
util/src/: ext.rs  lib.rs  pipe.rs  ref_visitor.rs  translate.rs
util/src/ext/: de.rs
util/src/tests/: translate.rs
util/src/translate/: flat2tree.rs  tree2flat.rs
util/testset/: flat.tiny  tree.mappings
