[package]
name = "java-mapping-serde-io-util"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
memchr = "2.8"
smol_str = { version = "0.3", optional = true }

[features]
smol-str = ["dep:smol_str"]

[lints]
workspace = true
