[package]
name = "java-mapping-serde-util"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
mapping-serde = { path = "../", package = "java-mapping-serde", default-features = false }
smol_str = { version = "0.3", optional = true }
io-util = { path = "../io", package = "java-mapping-serde-io-util", optional = true }
smallvec = { version = "1.15", optional = true }

[features]
default = ["std"]
std = ["mapping-serde/std"]
translate = ["dep:smol_str", "dep:io-util", "dep:smallvec", "std"]

[lints]
workspace = true
